...
        }
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        view.accessibilityIdentifier = "home"
        
        self.title = "Home"
        
        fetchMovies(type: selectedMovieSelectionType)
    }
    
    private func fetchMovies(type: MoviesSelectionType) {
        uiMoviesSelectionType?.text = type.labelText
...
