...
        fetchMovieDetail()
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        view.accessibilityIdentifier = "movie_details"
        uiView?.accessibilityIdentifier = "movie_details"
        
        updateScrollContent()

        setupCollectionView()
        
...
